--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>First Module ThreeJs</title>
-<link href="public/assets/css/styles.css" rel="stylesheet"></head>
+<link href="./public/assets/css/styles.css" rel="stylesheet"></head>
 <body>
   
-<script src="public/assets/js/app.js"></script></body>
+<script src="./public/assets/js/app.js"></script></body>
 </html>
